# truewordcloud

./: .gitignore  LICENSE  README.md  examples.py  examples_with_masks.py  generate_metadata.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  truewordcloud.py  truewordcloud_backup.py
docs/: GITHUB_SETUP_GUIDE.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.2.0.md
examples/assets/: README.md  sample_wordlist.csv
tests/: __init__.py  test_truewordcloud.py
